--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -85,3 +85,298 @@
 {% endblock trigger1 %}
 
 
+{% block projects %}
+	<section class="recent-project smallSlider page-block-large BGlight">
+		<div class="container wow zoomIn" data-wow-duration="0.50s" data-wow-delay="0.50s">
+			<div class="col-md-12">
+				<div class="section-heading">
+						<h2><i class="fa fa-paint-brush square BGsec"></i>Our Projects <small>Our latest creation</small></h2>
+						<a class="btn btn-primary" href="/static/joyus/portfolio-2col.html" title="View All Projects">View All Projects <i class="fa fa-chevron-circle-right"></i></a>
+						<div class="clear"></div>
+				</div>
+				
+					<ul class="bxslider">
+						<li>
+							<img class="img-responsive" src="/static/joyus/images/project/recent-home/01.jpg" width="725" height="475" alt="Project Name" />
+							<div class="project-data">
+								<ul>
+										<li><i class="fa fa-building squareSmall outline"></i> <strong>Company</strong>Awesome It Solutions</li>
+										<li><i class="fa fa-paint-brush squareSmall outline"></i> <strong>Work Done</strong>Total Infrastructure</li>
+										<li><i class="fa fa-calendar squareSmall outline"></i> <strong>Duration</strong>2 Week</li>
+										<li><i class="fa fa-dollar squareSmall outline"></i> <strong>Cost</strong>$50,000</li>
+								</ul>
+								<a class="btn btn-dark btn-lg" href="/static/joyus/portfolio1.html" title="View Details">View Details<i class="fa fa-chevron-circle-right"></i></a>
+							</div>
+						</li>
+						<li>
+							 <img class="img-responsive" src="/static/joyus/images/project/recent-home/02.jpg" width="725" height="475" alt="Project Name" />
+							<div class="project-data">
+								<ul>
+										<li><i class="fa fa-home squareSmall outline"></i> <strong>House</strong>Platinum Eve</li>
+										<li><i class="fa fa-paint-brush squareSmall outline"></i> <strong>Work Done</strong>Living Room, Kitchen</li>
+										<li><i class="fa fa-calendar squareSmall outline"></i> <strong>Duration</strong>2 Week</li>
+										<li><i class="fa fa-dollar squareSmall outline"></i> <strong>Cost</strong>$30,000</li>
+								</ul>
+								<a class="btn btn-dark btn-lg" href="/static/joyus/portfolio2.html" title="View Details">View Details<i class="fa fa-chevron-circle-right"></i></a>
+							</div>
+						</li>
+						<li>
+							<img class="img-responsive" src="/static/joyus/images/project/recent-home/03.jpg" width="725" height="475" alt="Project Name" />
+						 <div class="project-data">
+								<ul>
+										<li><i class="fa fa-building squareSmall outline"></i> <strong>Company</strong>Globocom Infotec</li>
+										<li><i class="fa fa-paint-brush squareSmall outline"></i> <strong>Work Done</strong>Total Interior</li>
+										<li><i class="fa fa-calendar squareSmall outline"></i> <strong>Duration</strong>3 Week</li>
+										<li><i class="fa fa-dollar squareSmall outline"></i> <strong>Cost</strong>$150,000</li>
+								</ul>
+								<a class="btn btn-dark btn-lg" href="/static/joyus/portfolio3.html" title="View Details">View Details<i class="fa fa-chevron-circle-right"></i></a>
+							</div>
+						</li>
+						
+						<li>
+							<img class="img-responsive" src="/static/joyus/images/project/recent-home/04.jpg" width="725" height="475" alt="Project Name" />
+						 	<div class="project-data">
+								<ul>
+										<li><i class="fa fa-home squareSmall outline"></i> <strong>Bunglow</strong>Lake Avenue</li>
+										<li><i class="fa fa-paint-brush squareSmall outline"></i> <strong>Work Done</strong>Total Interior &amp; exterior</li>
+										<li><i class="fa fa-calendar squareSmall outline"></i> <strong>Duration</strong>3 Week</li>
+										<li><i class="fa fa-dollar squareSmall outline"></i> <strong>Cost</strong>$75,000</li>
+								</ul>
+								<a class="btn btn-dark btn-lg" href="/static/joyus/portfolio4.html" title="View Details">View Details<i class="fa fa-chevron-circle-right"></i></a>
+							</div>
+						</li>
+					</ul>
+			</div>          
+		</div><!-- end container -->
+	</section>
+{% endblock projects %}
+
+
+{% block promo %}
+	<section class="promoBox">
+		<div class="container-fluid">
+			<div class="row">
+			
+				<div class="col-md-6 commercial wow fadeInLeft" data-wow-duration="0.50s" data-wow-delay="0.50s">
+					<div class="absShape BGprime opaque">
+						<div class="info">
+							<h3>Commercial</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis quam non tellus ultricies accumsan. Praesent volutpat neque non hendrerit</p>
+						</div>
+					</div>
+					<a href="/static/joyus/portfolio1.html" title=""><i class="fa fa-link square BGdark"></i></a>
+				</div>
+				
+				<div class="col-md-6 residential wow fadeInRight" data-wow-duration="0.50s" data-wow-delay="0.50s">
+					<div class="absShape BGsec opaque">
+						<div class="info">
+							<h3>Residential</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis quam non tellus ultricies accumsan. Praesent volutpat neque non hendrerit</p>
+						</div>
+					</div>
+					<div class="col-md-5 col-sm-4 col-xs-12">
+					</div>
+					<a href="/static/joyus/portfolio2.html" title=""><i class="fa fa-link square BGdark"></i></a>
+				</div>
+				
+			</div><!-- end row -->
+		</div><!-- end container -->
+	</section>
+{% endblock promo %}
+
+
+{% block about %}
+	<section class="page-block-large">
+		<div class="container">
+		
+			<div class="col-md-6 col-sm-6 col-xs-12 content-box wow fadeInLeft" data-wow-duration="0.50s" data-wow-delay="0.50s">
+				<div class="section-heading">
+					<h2><i class="fa fa-building square BGsec"></i>About Us <small>Who are we</small></h2>
+					<div class="clear"></div>
+				</div>
+				<p>Lorem ipsum dolor sit amet, rislaoreetsuscipit turpis mollis non. Lcons is molli  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis quam non tellus ultricies accumsan. Praesent volutpat neque non hendrerit finibus. Pellentesque sit amet fermentum risus.</p>
+				<p>Maecenas molestie pulas molestie pulvinar augue. Ut quis sem ut neque gravida ullamcorper. Nunc nisi risus, accumsan nec elit ac, molvinar augue. Ut quis sem ut neque gravida ullamcorper. Nunc nisi risus, accumsan nec elit ac, molestie varius urna.</p>
+				<a class="btn btn-primary" href="/static/joyus/about1.html" title="See All">Read More <i class="fa fa-chevron-circle-right"></i></a>
+			</div>
+		
+			<div class="col-md-6 col-sm-6 col-xs-12 content-box wow fadeInRight" data-wow-duration="0.50s" data-wow-delay="0.50s">
+				<div class="section-heading">
+					<h2><i class="fa fa-star square BGsec"></i>Why Striking <small>Why choose us</small></h2>
+					<div class="clear"></div>
+				</div>
+				<ul class="list-main">
+					<li>
+						<h5>We have highly professional team</h5>
+						Best location in te and Lorem ipsum dolor sit amet, rislaoreetsuscipit turpis mollis non. Lcons is molli
+					</li>
+					<li>
+						<h5>We are commited</h5>
+						Best location in te and Lorem ipsum dolor sit amet, rislaoreetsuscipit turpis mollis non. Lcons is molli
+					</li>
+					<li>
+						<h5>We deliver best results</h5>
+						Best location in te and Lorem ipsum dolor sit amet, rislaoreetsuscipit turpis mollis non. Lcons is molli
+					</li>
+				</ul>
+			</div>
+		</div><!-- end container -->
+	</section>
+{% endblock about %}
+
+
+{% block stat %}
+	<section class="stat">
+		<div class="boxedb page-block">
+			<div class="container">
+				<div class="col-md-3 col-sm-6 col-xs-12">
+						<i class="fa fa-building-o fa-4x"></i>
+						<h1 class="timer wow zoomIn" data-wow-delay="500ms" data-from="0" data-to="5" data-speed="4000"></h1>
+						<span class="line"></span>
+						<h4>Branches</h4>
+						Lorem ipsum dolor sit amet, rislaoreetsuscipit turpis mollis non. Lcons is molli
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12">
+						<i class="fa fa-graduation-cap fa-4x"></i>
+						<h1 class="timer wow zoomIn" data-wow-delay="700ms" data-from="0" data-to="50" data-speed="4000"></h1>
+						<span class="line"></span>
+						<h4>Experts</h4>
+						 Noligula sapien, placerat nec quam sit amet, venenatis mattis nunc. Nulla molestie, velit et commodo rutrum 
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12">
+						<i class="fa fa-diamond fa-4x"></i>
+						<h1 class="timer wow zoomIn" data-wow-delay="900ms" data-from="0" data-to="500" data-speed="4000"></h1>
+						<span class="line"></span>
+						<h4>Clients</h4>
+						Eante ipsum faucibus sapien, eget porttitorerat vitae nisi. Phasellus vel gravida quam, porttitor rhoncus tortor.
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12">
+						<i class="fa fa-paint-brush fa-4x"></i>
+						<h1 class="timer wow zoomIn" data-wow-delay="1100ms" data-from="0" data-to="1500" data-speed="4000"></h1>
+						<span class="line"></span>
+						<h4>Projects</h4>
+						Curabitur facilisis sit amet arcu ut commodo. Nullam a ante quis sem ullamcorper tristique.
+				</div>
+			</div><!-- end container -->
+		</div><!-- end boxBg -->
+	</section>
+{% endblock stat %}
+
+
+{% block testimonials %}
+	<section id="testimonials" class="smallSlider page-block-large">
+		<div class="container wow zoomIn" data-wow-duration="0.50s" data-wow-delay="0.50s">
+			<div class="col-md-12">
+			
+			<div class="section-heading">
+					<h2><i class="fa fa-quote-left square BGsec"></i>Testimonials <small>What people say about us!</small></h2>
+					<a class="btn btn-primary" href="/static/joyus/testimonials.html" title="View All Testimonials">View All Testimonials <i class="fa fa-chevron-circle-right"></i></a>
+					<div class="clear"></div>
+			</div>
+		
+			<ul class="bxslider">
+				<li class=" item">
+					<div class="col-md-6 col-sm-6 col-xs-6">
+						<div class="pic"><img class="img-responsive" src="/static/joyus/images/quote/01.jpg" alt="Jenny Doe" width="100" height="100" /></div>
+						<div class="info">
+							<h4>Jenny Doe<span>CEO</span></h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer gravida velit quis dolor tristique accumsan. Pellentesque elit tortor, adipiscing vel velit inermentum nulla. Donec in urna semulla facilisi.</p>
+						</div>
+					</div>
+					
+					<div class="col-md-6 col-sm-6 col-xs-6">
+						<div class="pic"><img class="img-responsive" src="/static/joyus/images/quote/02.jpg" alt="John Doe" width="100" height="100" /></div>
+						<div class="info">
+							<h4>John Doe<span>Business Executive</span></h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean id ipsum facilisis, congue ex at, tempus lacus. Sed rhoncus tincidunt felis, eu tempus metus pretium nec. Interdum et malesuada fames ac ante ipsum primis in faucibus. </p>
+						</div>
+					</div>
+				</li><!-- end item -->
+				<li class=" item">
+					<div class="col-md-6 col-sm-6 col-xs-6">
+						<div class="pic"><img class="img-responsive" src="/static/joyus/images/quote/03.jpg" alt="Jarvis Doe" width="100" height="100" /></div>
+						<div class="info">
+							<h4>Jarvis Doe<span>Design Expert</span></h4>
+							<p>Sed velit nulla, hendrerit nec euismod eu, interdum eget ipsum. Sed turpis lacus, egestas in nulla vel, rutrum auctor felis. Integer ac congue arcu. Nullam maximus elit purus. Pellentesque habitant morbi tristique senectus</p>
+						</div>
+					</div>
+					
+					<div class="col-md-6 col-sm-6 col-xs-6">
+						<div class="pic"><img class="img-responsive" src="/static/joyus/images/quote/04.jpg" alt="Cyra Doe" width="100" height="100" /></div>
+						<div class="info">
+							<h4>Cyra Doe<span>Housewife</span></h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer gravida velit quis dolor tristique accumsan. Pellentesque elit tortor, adipiscing vel velit inermentum nulla. Donec in urna semulla facilisi.</p>
+						</div>
+					</div>
+				</li><!-- end item -->
+				<li class=" item">
+					<div class="col-md-6 col-sm-6 col-xs-6">
+						<div class="pic"><img class="img-responsive" src="/static/joyus/images/quote/05.jpg" alt="Shawn Doe" width="100" height="100" /></div>
+						<div class="info">
+							<h4>Shawn Doe<span>Business Executive</span></h4>
+							<p> Keset netus et malesuada fames ac turpis egestas. Mauris justo dolor, egestas sed feugiat vitae, iaculis vulputate lorem. Vivamus in ex odio. Sed eget fringilla dui, ut auctor odio. Sed in diam sit amet dolor bibendum suscipit.</p>
+						</div>
+					</div>
+					
+					<div class="col-md-6 col-sm-6 col-xs-6">
+						<div class="pic"><img class="img-responsive" src="/static/joyus/images/quote/06.jpg" alt="Sandra Doe" width="100" height="100" /></div>
+						<div class="info">
+							<h4>Sandra Doe<span>Business Executive</span></h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer gravida ve Aliquam accumsan commodo nunc accumsan sollicitudin. Cras molestie est quis miit inermentum nulla. Donec in urna semulla facilisi.</p>
+						</div>
+					</div>
+				</li><!-- end item -->
+			</ul>
+		 </div> 
+		</div><!-- end container -->
+	</section>
+{% endblock testimonials %}
+
+
+{% block clients %}
+	<section class="client page-block">
+		<div class="container">
+			<div class="col-md-5 col-sm-5 col-xs-12 wow fadeInLeft" data-wow-duration="0.50s" data-wow-delay="0.50s">
+					<h2><i class="fa fa-diamond square BGsec"></i>Clients <small>Precious  &amp; Happy clients</small></h2>
+			</div>
+			
+			<div class="col-md-7 col-sm-7 col-xs-12 wow fadeInRight" data-wow-duration="0.50s" data-wow-delay="0.50s">
+				<div class="slider4">
+					<div class="slide"><img src="/static/joyus/images/clients/01.png" alt="Client name"></div>
+					<div class="slide"><img src="/static/joyus/images/clients/02.png" alt="Client name"></div>
+					<div class="slide"><img src="/static/joyus/images/clients/03.png" alt="Client name"></div>
+					<div class="slide"><img src="/static/joyus/images/clients/04.png" alt="Client name"></div>
+					<div class="slide"><img src="/static/joyus/images/clients/05.png" alt="Client name"></div>
+					<div class="slide"><img src="/static/joyus/images/clients/06.png" alt="Client name"></div>
+					<div class="slide"><img src="/static/joyus/images/clients/07.png" alt="Client name"></div>
+				</div>
+			</div><!-- end col-md-4 --> 
+		</div><!-- end container -->
+	</section>
+{% endblock clients %}
+
+
+{% block call_to_action %}
+	<section class="calltoAction">
+		<div class="boxedw page-block">
+			<div class="container">
+				<div class="widget wow fadeInLeft" data-wow-duration="0.50s" data-wow-delay="0.50s">
+						<h2>Get A Quote<small>With Experts Advice</small></h2>
+						<p>Lorem ipsu Pellentesque dolor sit amet, consectetur adipiscing elit. Integer gravida velit quis dolor tristique </p>
+						<a class="btn btn-primary" href="/static/joyus/contact1.html" title="Get A Quote">Get A Quote <i class="fa fa-chevron-circle-right"></i></a>
+						<i class="fa fa-file opaque"></i>
+				</div>
+				<div class="widget wow fadeInRight" data-wow-duration="0.50s" data-wow-delay="0.50s">
+					<h2>Subscribe<small>to Enewsletter</small></h2>
+					<form action="http://dezinethemes.com/envato/striking/200/01/09/form/subscribe.php" id="subscribeForm" method="post">
+						<div class="form-row">
+							 <input type="email" id="emailSubscribe" name="emailSubscribe" class="form-control" placeholder="Enter Your Email Address Here..." />
+							 <input type="text" id="sub-security" name="sub-security" class="form-control hide" value="" />
+							 <input type="submit" id="sub-submit" name="sub-submit" value="Subscribe &#xf138;" class="btn btn-primary" />
+						</div>
+					</form>
+					<i class="fa fa-envelope opaque"></i>
+				</div>
+			</div><!-- end container -->
+		</div> <!-- end boxedw -->
+	</section>
+{% endblock call_to_action %}
