--- a/project/templates/sitetree/menu_dropdown.html
+++ b/project/templates/sitetree/menu_dropdown.html
@@ -1,8 +1,7 @@
 {% load sitetree %}
 
-
-<ul class="dropdown-menu dropdown-menu-1">
-    {% for item in sitetree_items %}
-        <li><a href="{% sitetree_url for item %}" class="link-page">{{ item.title_resolved }}</a></li>
-     {% endfor %}
+<ul class="sub-nav">
+	{% for item in sitetree_items %}
+    <li><a href="{% sitetree_url for item %}" title="Testimonials">{{ item.title_resolved }}</a></li>
+  {% endfor %}
 </ul>
