--- a/configs/templates/configs/tags/top_menu.html
+++ b/configs/templates/configs/tags/top_menu.html
@@ -1,9 +1,8 @@
 <div class="header-top BGdark">
   <div class="container">
     <div class="col-md-8 col-sm-12 col-xs-12">
-      <span><i class="fa fa-phone"></i> (123) 456-7890 </span>
-      <span><i class="fa fa-fax"></i> (123) 456-7890</span>
-      <span><i class="fa fa-envelope-o"></i> <a href="/static/joyus/mailto:info@companynme.com" title="">info@companynme.com</a> </span>
+      <span><i class="fa fa-phone"></i> {{ config.get_main_phone }} </span>
+      <span><i class="fa fa-envelope-o"></i> <a href="/static/joyus/mailto:{{ config.site_email }}" title="">{{ config.site_email }}</a> </span>
     </div>
     <div class="col-md-4 hidden-sm hidden-xs">
       <ul class="social list-inline pull-right">
