--- a/project/templates/sitetree/menu.html
+++ b/project/templates/sitetree/menu.html
@@ -1,19 +1,16 @@
 {% load sitetree %}
 
-
-<nav class="navigation collapse navbar-collapse pull-right">
-    <ul class="nav-links nav navbar-nav">
-
-        {% for item in sitetree_items %}
-            <li class="{% if item.has_children %}dropdown{% endif %}">
-                <a href="{% sitetree_url for item %}" class="main-menu">
-                    {{ item.title_resolved }}
-                    {% if item.has_children %}<span class="fa fa-angle-down icons-dropdown"></span>{% endif %}</a>
-                {% if item.has_children %}
-                    {% sitetree_children of item for menu template "sitetree/menu_dropdown.html" %}
-                {% endif %}
-            </li>
-        {% endfor %}
-
-    </ul>
-</nav>
+<ul class="nav navbar-nav">
+	{% for item in sitetree_items %}
+		{% if item.has_children %}
+			<li class="sub">
+				<a href="{% sitetree_url for item %}" title="{{ item.title_resolved }}">{{ item.title_resolved }}</a>
+			 	{% sitetree_children of item for menu template "sitetree/menu_dropdown.html" %}
+			</li>
+		{% else %}
+			<li class="">
+				<a href="{% sitetree_url for item %}" title="{{ item.title_resolved }}">{{ item.title_resolved }}</a>
+			</li>
+		{% endif %}
+	{% endfor %}
+</ul>
