--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -191,7 +191,7 @@
 		
 			<div class="col-md-6 col-sm-6 col-xs-12 content-box wow fadeInLeft" data-wow-duration="0.50s" data-wow-delay="0.50s">
 				<div class="section-heading">
-					<h2><i class="fa fa-building square BGsec"></i>About Us <small>Who are we</small></h2>
+					<h2><i class="fa fa-building square BGsec"></i>О нас <small>кто мы</small></h2>
 					<div class="clear"></div>
 				</div>
 				<p>Lorem ipsum dolor sit amet, rislaoreetsuscipit turpis mollis non. Lcons is molli  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis quam non tellus ultricies accumsan. Praesent volutpat neque non hendrerit finibus. Pellentesque sit amet fermentum risus.</p>
