--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -10,7 +10,7 @@
 				<img class="img-responsive" src="/static/joyus/images/slider/slide1.jpg" alt="" />
 				<div class="symbol">
 					<div class="absShape text-center">
-						<h1>Striking<small>Welcome to creative world!</small></h1>
+						<p>Натяжные потолки<small>Под ключ за 200 ₽ м<sup>2</sup></small></p>
 					</div>
 					<div class="square3 opaque"></div>
 					<div class="square2 opaque"></div>
@@ -21,7 +21,7 @@
 				<img class="img-responsive" src="/static/joyus/images/slider/slide2.jpg" alt="" />
 				<div class="symbol">
 					<div class="absShape text-center">
-						<h1>Pro Services<small>Wide range of services!</small></h1>
+						<p>Сегодня замер<small>Завтра монтаж</small></p>
 					</div>            
 					<div class="square1 opaque"></div>
 					<div class="square3 opaque"></div>
@@ -32,7 +32,7 @@
 				<img class="img-responsive" src="/static/joyus/images/slider/slide3.jpg" alt="" />
 				<div class="symbol">
 					<div class="absShape text-center">
-							 <h1>Innovative ideas<small>Expert designers with amazing talent!</small></h1>
+							 <p>Бесплатно<small>Установим люстры</small></p>
 					</div>            
 
 					<div class="square3 opaque"></div>
@@ -48,26 +48,32 @@
 {% block advantages %}
 	<section class="page-block-large">
 		<div class="container">
+			<div class="seo-title">
+				<h1>Натяжные потолки в Новороссийске</h1>
+			</div>
+			<div class="tip-potolka">
+				<div class="col-md-3 col-sm-3 col-xs-12 wow fadeInDown" data-wow-duration="0.50s" data-wow-delay="0.50s">
+					<h2>Матовый<small>натяжной потолок</small>  </h3><span class="line"></span>
+					<p>
+						Самый распространенный вид полотен. Может быть изготовлен из пленки ПВХ или ткани. На вид абсолютно не отличается от идеально оштукатуренного потолка. Великолепно смотрится в любом интерьере.
+					</p>
+				</div>
 				
-			<div class="col-md-3 col-sm-3 col-xs-12 wow fadeInDown" data-wow-duration="0.50s" data-wow-delay="0.50s">
-				<h3><small>Exclusive</small> DESIGNS</h3><span class="line"></span>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer gravida velit quis lorem ipsum dola dolor tristiqumsan.</p>
-			</div>
-			
-			<div class="col-md-3 col-sm-3 col-xs-12 wow fadeInDown" data-wow-duration="0.50s" data-wow-delay="0.75s">
-				<h3><small>Wide Range</small> VARIETIES</h3><span class="line"></span>
-				<p>Etiam aliquam lacinia rutrum. Sed sit amet tortor id eros suscipit semper. Suspendisse nec condimentum metus, nec porttitor risus.</p>
-			</div>
-			
-			<div class="col-md-3 col-sm-3 col-xs-12 wow fadeInDown" data-wow-duration="0.50s" data-wow-delay="1s">
-				<h3><small>Premium</small> FEATURES</h3><span class="line"></span>
-				<p>Quisque sodales ultricies posuere. Vestibulum ante ipsum primis in faucibus orci luctu. Proin scelerisque neque porta astapasta.</p>
-			</div>
-			
-			<div class="col-md-3 col-sm-3 col-xs-12 wow fadeInDown" data-wow-duration="0.50s" data-wow-delay="1.25s">
-				<h3><small>Industry</small> EXPERTS</h3><span class="line"></span>
-				<p>Sed bibendum lectus at cursus pharetra. Donec quis auctor mauris. Aenean ultricies elit augue, eget ultrices ante pretium in.</p>
-			</div>
+				<div class="col-md-3 col-sm-3 col-xs-12 wow fadeInDown" data-wow-duration="0.50s" data-wow-delay="0.75s">
+					<h2><small>Wide Range</small> VARIETIES</h3><span class="line"></span>
+					<p>Etiam aliquam lacinia rutrum. Sed sit amet tortor id eros suscipit semper. Suspendisse nec condimentum metus, nec porttitor risus.</p>
+				</div>
+				
+				<div class="col-md-3 col-sm-3 col-xs-12 wow fadeInDown" data-wow-duration="0.50s" data-wow-delay="1s">
+					<h2><small>Premium</small> FEATURES</h3><span class="line"></span>
+					<p>Quisque sodales ultricies posuere. Vestibulum ante ipsum primis in faucibus orci luctu. Proin scelerisque neque porta astapasta.</p>
+				</div>
+				
+				<div class="col-md-3 col-sm-3 col-xs-12 wow fadeInDown" data-wow-duration="0.50s" data-wow-delay="1.25s">
+					<h2><small>Industry</small> EXPERTS</h3><span class="line"></span>
+					<p>Sed bibendum lectus at cursus pharetra. Donec quis auctor mauris. Aenean ultricies elit augue, eget ultrices ante pretium in.</p>
+				</div>
+			</div>	
 								
 		</div><!-- end container -->
 	</section>
