--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -27,6 +27,7 @@
 <link rel="stylesheet" href="/static/joyus/css/bxslider.css">
 <link rel="stylesheet" href="/static/joyus/css/color.css" />
 <link rel="stylesheet" href="/static/joyus/css/style.css" />
+<link rel="stylesheet" type="text/css" href="/static/joyus/css/develop.css">
 <link rel="stylesheet" href="/static/joyus/css/boxed.css" />
 
 <script src="/static/joyus/js/modernizr.custom.js"></script>
