--- a/project/static/joyus/css/style.css
+++ b/project/static/joyus/css/style.css
@@ -1868,6 +1868,7 @@ footer.footer2 .social a:hover {
 	color: #fff;
 	text-transform: uppercase;
     font-size: 3em;
+    line-height: 1.1;
 }
 #slides p small {
 	font-size: 24px;
