start page item

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -62,14 +62,17 @@
 		</header>
 		<!-- ::: END ::: -->
 
+		{% block breadcrumbs %}
+		{% endblock breadcrumbs %}
+
 		<!--  :::  HOME SLIDER ::: -->
 		{% block slider %}
 		{% endblock slider %}
 		<!-- ::: END ::: -->
 
 		<!--  :::  SPECIALITY ::: -->
-		{% block advantages %}
-		{% endblock advantages %}
+		{% block content %}
+		{% endblock content %}
 		<!-- ::: END ::: -->
 
 		<!--  :::  FEATURED BOX ::: -->
