add ceilings app

--- a/core/templates/core/page_item.html
+++ b/core/templates/core/page_item.html
@@ -35,14 +35,8 @@
   	<div class="container">
       
       <div class="col-md-3 col-sm-4 col-xs-12 text-center wow fadeInUp" data-wow-duration="0.50s" data-wow-delay="0.50s">
-         <div class="meta-data">
-            <div class="meta BGprime">01</div>
-            <div class="meta counter BGlight">
-                <div>300<small>Projects Done</small></div>
-                <div>05<small>Projects in hand</small></div>
-                <div>08<small>Experts</small></div>
-            </div>
-         </div>
+         <!-- Widget start -->
+        {% sidebar request %}
       </div><!-- end col-md-4 -->
       
       <div class="col-md-9 col-sm-8 col-xs-12 wow fadeInUp" data-wow-duration="0.50s" data-wow-delay="0.75s">
