--- a/core/templates/core/post_item.html
+++ b/core/templates/core/post_item.html
@@ -5,7 +5,7 @@
 
 
 {% block content %}
-<div class="section">
+<div class="section page-block-large">
     <div class="">
         <div class="container">
             <div class="row">
