--- a/project/templates/examples/dezinethemes.com/envato/striking/200/01/09/services-single-1.html
+++ b/project/templates/examples/dezinethemes.com/envato/striking/200/01/09/services-single-1.html
@@ -229,7 +229,7 @@
                 <div>08<small>Experts</small></div>
             </div>
          </div>
-      </div><!-- end col-md-4 -->
+      </div>
       
       <div class="col-md-9 col-sm-8 col-xs-12 wow fadeInUp" data-wow-duration="0.50s" data-wow-delay="0.75s">
       	<h1 class="big"><strong>Commercial</strong>Interior design</h1>
