--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -1,6 +1,7 @@
 {% load static from staticfiles %}
 {% load core_tags %}
 {% load configs_tags %}
+{% load mptt_tags %}
 
 <!DOCTYPE html>
 <html lang="en"><head>
@@ -53,7 +54,7 @@
 			
 			<div class="container">
 				<div class="col-md-3 col-sm-3 col-xs-12 logo">
-						<a title="company Logo" href="/static/joyus/index.html"><img class="img-responsive" src="/static/joyus/images/company.png" width="200" height="100" alt="Company Logo" /></a>
+						<a title="company Logo" href="/"><img class="img-responsive" src="/static/joyus/images/company.png" width="200" height="100" alt="Company Logo" /></a>
 				</div>
 				<div class="col-md-9 col-sm-9 col-xs-12 cbp-af-inner rightnav">
 					{% base_menu request %}
