--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -2,7 +2,7 @@
 {% load core_tags %}
 {% load flatblocks %}
 {% load cropping %}
-						
+
 {% block slider %}
 	<section id="slides" class="BGdark">
 		<ul class="bxslider">
@@ -22,7 +22,7 @@
 				<div class="symbol">
 					<div class="absShape text-center">
 						<p>Сегодня замер<small>Завтра монтаж</small></p>
-					</div>            
+					</div>
 					<div class="square1 opaque"></div>
 					<div class="square3 opaque"></div>
 					<div class="square2 opaque"></div>
@@ -33,7 +33,7 @@
 				<div class="symbol">
 					<div class="absShape text-center">
 							 <p>Бесплатно<small>Установим люстры</small></p>
-					</div>            
+					</div>
 
 					<div class="square3 opaque"></div>
 					<div class="square2 opaque"></div>
@@ -41,7 +41,7 @@
 				</div>
 			</li>
 		</ul>
-	</section>	
+	</section>
 {% endblock slider %}
 
 
@@ -51,19 +51,19 @@
 			<div class="seo-title">
 				<h1>Натяжные потолки в Новороссийске</h1>
 			</div>
-			{% for page in pages %}	
+			{% for ceiling in ceilings %}
 				<div class="tip-potolka">
 					<div class="col-md-3 col-sm-3 col-xs-12 wow fadeInDown" data-wow-duration="0.50s" data-wow-delay="0.50s">
 						<h2>
-							{% for word in page.split_name %}
+							{% for word in ceiling.split_name %}
 								{% if forloop.first %}
 									<small>{{ word }}</small>
-								{% else %}{{ word }} {% endif %}	
+								{% else %}{{ word }} {% endif %}
 							{% endfor %}
 						</h2>
 						<span class="line"></span>
-						{{ page.preview_text|safe }}
-						<a class="btn btn-primary" href="{{ page.get_url }}" title="See All">Подробнее <i class="fa fa-chevron-circle-right"></i></a>
+						{{ ceiling.preview_text|safe }}
+						<a class="btn btn-primary" href="{{ ceiling.get_url }}" title="See All">Подробнее <i class="fa fa-chevron-circle-right"></i></a>
 					</div>
 				</div>
 			{% endfor %}
@@ -78,7 +78,7 @@
 			<div class="col-md-12">
 					<h1><small>We offer wide range of </small>designs &amp; Services</h1>
 			</div>
-		</div><!--end-container--> 
+		</div><!--end-container-->
 	</section>
 {% endblock trigger1 %}
 
@@ -92,7 +92,7 @@
 					<a class="btn btn-primary" href="/static/joyus/portfolio-2col.html" title="View All Projects">Смотреть еще <i class="fa fa-chevron-circle-right"></i></a>
 					<div class="clear"></div>
 				</div>
-				
+
 					<ul class="bxslider">
 						<li>
 							<img class="img-responsive" src="/static/joyus/images/project/recent-home/01.jpg" width="725" height="475" alt="Project Name" />
@@ -136,7 +136,7 @@
 								<a class="btn btn-dark btn-lg" href="/static/joyus/portfolio1.html" title="Смотреть подробнее">Смотреть подробнее<i class="fa fa-chevron-circle-right"></i></a>
 							</div>
 						</li>
-						
+
 						<li>
 							<img class="img-responsive" src="/static/joyus/images/project/recent-home/04.jpg" width="725" height="475" alt="Project Name" />
 							<div class="project-data">
@@ -152,7 +152,7 @@
 							</div>
 						</li>
 					</ul>
-			</div>          
+			</div>
 		</div><!-- end container -->
 	</section>
 {% endblock projects %}
@@ -246,7 +246,7 @@
 {% block about %}
 	<section class="page-block-large">
 		<div class="container">
-		
+
 			<div class="col-md-6 col-sm-6 col-xs-12 content-box wow fadeInLeft" data-wow-duration="0.50s" data-wow-delay="0.50s">
 				<div class="section-heading">
 					<h2><i class="fa fa-building square BGsec"></i>О нас <small>кто мы</small></h2>
@@ -255,7 +255,7 @@
 				{{ about_page.text|truncatewords:100|safe }}
 				<a class="btn btn-primary" href="{{ about_page.get_url }}" title="See All">Подробнее <i class="fa fa-chevron-circle-right"></i></a>
 			</div>
-		
+
 			<div class="col-md-6 col-sm-6 col-xs-12 content-box wow fadeInRight" data-wow-duration="0.50s" data-wow-delay="0.50s">
 				<div class="section-heading">
 					<h2><i class="fa fa-star square BGsec"></i>Why Striking <small>Why choose us</small></h2>
@@ -297,7 +297,7 @@
 						<h1 class="timer wow zoomIn" data-wow-delay="700ms" data-from="0" data-to="50" data-speed="4000"></h1>
 						<span class="line"></span>
 						<h4>Experts</h4>
-						 Noligula sapien, placerat nec quam sit amet, venenatis mattis nunc. Nulla molestie, velit et commodo rutrum 
+						 Noligula sapien, placerat nec quam sit amet, venenatis mattis nunc. Nulla molestie, velit et commodo rutrum
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 						<i class="fa fa-diamond fa-4x"></i>
@@ -323,13 +323,13 @@
 	<section id="testimonials" class="smallSlider page-block-large">
 		<div class="container wow zoomIn" data-wow-duration="0.50s" data-wow-delay="0.50s">
 			<div class="col-md-12">
-			
+
 			<div class="section-heading">
 					<h2><i class="fa fa-quote-left square BGsec"></i>Testimonials <small>What people say about us!</small></h2>
 					<a class="btn btn-primary" href="/static/joyus/testimonials.html" title="View All Testimonials">View All Testimonials <i class="fa fa-chevron-circle-right"></i></a>
 					<div class="clear"></div>
 			</div>
-		
+
 			<ul class="bxslider">
 				<li class=" item">
 					<div class="col-md-6 col-sm-6 col-xs-6">
@@ -339,7 +339,7 @@
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer gravida velit quis dolor tristique accumsan. Pellentesque elit tortor, adipiscing vel velit inermentum nulla. Donec in urna semulla facilisi.</p>
 						</div>
 					</div>
-					
+
 					<div class="col-md-6 col-sm-6 col-xs-6">
 						<div class="pic"><img class="img-responsive" src="/static/joyus/images/quote/02.jpg" alt="John Doe" width="100" height="100" /></div>
 						<div class="info">
@@ -356,7 +356,7 @@
 							<p>Sed velit nulla, hendrerit nec euismod eu, interdum eget ipsum. Sed turpis lacus, egestas in nulla vel, rutrum auctor felis. Integer ac congue arcu. Nullam maximus elit purus. Pellentesque habitant morbi tristique senectus</p>
 						</div>
 					</div>
-					
+
 					<div class="col-md-6 col-sm-6 col-xs-6">
 						<div class="pic"><img class="img-responsive" src="/static/joyus/images/quote/04.jpg" alt="Cyra Doe" width="100" height="100" /></div>
 						<div class="info">
@@ -373,7 +373,7 @@
 							<p> Keset netus et malesuada fames ac turpis egestas. Mauris justo dolor, egestas sed feugiat vitae, iaculis vulputate lorem. Vivamus in ex odio. Sed eget fringilla dui, ut auctor odio. Sed in diam sit amet dolor bibendum suscipit.</p>
 						</div>
 					</div>
-					
+
 					<div class="col-md-6 col-sm-6 col-xs-6">
 						<div class="pic"><img class="img-responsive" src="/static/joyus/images/quote/06.jpg" alt="Sandra Doe" width="100" height="100" /></div>
 						<div class="info">
@@ -383,7 +383,7 @@
 					</div>
 				</li><!-- end item -->
 			</ul>
-		 </div> 
+		 </div>
 		</div><!-- end container -->
 	</section>
 {% endblock testimonials %}
@@ -395,7 +395,7 @@
 			<div class="col-md-5 col-sm-5 col-xs-12 wow fadeInLeft" data-wow-duration="0.50s" data-wow-delay="0.50s">
 					<h2><i class="fa fa-diamond square BGsec"></i>Clients <small>Precious  &amp; Happy clients</small></h2>
 			</div>
-			
+
 			<div class="col-md-7 col-sm-7 col-xs-12 wow fadeInRight" data-wow-duration="0.50s" data-wow-delay="0.50s">
 				<div class="slider4">
 					<div class="slide"><img src="/static/joyus/images/clients/01.png" alt="Client name"></div>
@@ -406,7 +406,7 @@
 					<div class="slide"><img src="/static/joyus/images/clients/06.png" alt="Client name"></div>
 					<div class="slide"><img src="/static/joyus/images/clients/07.png" alt="Client name"></div>
 				</div>
-			</div><!-- end col-md-4 --> 
+			</div><!-- end col-md-4 -->
 		</div><!-- end container -->
 	</section>
 {% endblock clients %}
