--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -34,6 +34,8 @@
 <link rel="stylesheet" href="/static/joyus/css/boxed.css">
 <link rel="stylesheet" href="/static/joyus/css/magnific-popup.css"/>
 <link rel="stylesheet" href="/static/joyus/css/popup.css"/>
+<link rel="stylesheet" href="/static/joyus/css/ceilings/ceilings.css"/>
+<link rel="stylesheet" href="/static/joyus/css/core/main.css"/>
 
 <script src="/static/joyus/js/modernizr.custom.js"></script>
 <!--[if lt IE 9]>
@@ -55,7 +57,7 @@
 		<header id="home" class="cbp-af-header header2">
 			{% top_menu request %}
 			<!-- Header top end -->
-			
+
 			<div class="container">
 				<div class="col-md-3 col-sm-3 col-xs-12 logo">
 						<a title="company Logo" href="/"><img class="img-responsive" src="/static/joyus/images/company.png" width="200" height="100" alt="Company Logo" /></a>
@@ -136,7 +138,7 @@
 	<script src="/static/joyus/js/classie.js"></script>
 	<script src="/static/joyus/js/waypoints.min.js"></script>
 	<script src="/static/joyus/js/jquery.countTo.js"></script>
-	<script src="/static/joyus/js/jquery.prettyPhoto.js"></script> 
+	<script src="/static/joyus/js/jquery.prettyPhoto.js"></script>
 	<script src="/static/joyus/js/wow.min.js"></script>
 	<script src="/static/joyus/js/jquery.datetimepicker.js"></script>
 	<script src="/static/joyus/js/placeholders.js"></script>
