--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -76,7 +76,28 @@
 	<section class="featured BGprime page-block-small">
 		<div class="container wow fadeInDown" data-wow-duration="0.50s" data-wow-delay="0.50s">
 			<div class="col-md-12">
-					<h1><small>We offer wide range of </small>designs &amp; Services</h1>
+				<h2><small>Монтаж натяжных потолков</small>Лучшее решение для вашего интерьера</h2>
+				<div class="ostav_zayavku">
+					<div class="header_zakaz"><button class="btn btn-primary" data-toggle="modal" data-target="#myModal">Заказать замер<i class="fa fa-chevron-circle-right"></i></button></div>
+
+					<!-- Modal -->
+					<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+					  <div class="modal-dialog">
+					    <div class="modal-content">
+					      <div class="modal-header">
+					        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					        <h3 class="modal-title" id="myModalLabel">Заказать замер</h3>
+					      </div>
+					      <div class="modal-body">
+					       Форма
+					      </div>
+					      <div class="modal-footer">
+					        <button type="button"  data-dismiss="modal"class="btn btn-primary">Закрыть</button>
+					      </div>
+					    </div>
+					  </div>
+					</div>
+				</div>
 			</div>
 		</div><!--end-container-->
 	</section>
@@ -159,6 +180,15 @@
 
 
 {% block promo %}
+<div class="container">
+	<div class="col-md-12">
+		<div class="section-heading folio-home">
+			<h3><i class="fa fa-picture-o" aria-hidden="true"></i>Наши работы</h3>
+				<a class="btn btn-primary" href="/projects" title="Смотреть еще">Смотреть все работы<i class="fa fa-chevron-circle-right"></i></a>
+			<div class="clear"></div>
+		</div>
+	</div>
+</div>
 <section id="owl-recent-project" class="owl-carousel owl-theme zoom-gallery">
 	<!-- Item Start -->
 		<div class="item">
